# QtProject

./: .gitignore  CMakeLists.txt  README.md
src/: CppSignalSender.cpp  CppSignalSender.h  CppWorker.cpp  CppWorker.h  Movie.cpp  Movie.h  PropertyWrapper.cpp  PropertyWrapper.h  QmlJSCaller.cpp  QmlJSCaller.h  main.cpp
src/AppWrapper/: AppWrapper.cpp  AppWrapper.h  CMakeLists.txt  CppEnum.cpp  CppEnum.h
src/AttachedProperty/: CMakeLists.txt  Timer.cpp  Timer.h  TimerAttached.cpp  TimerAttached.h
src/CppClass/: CMakeLists.txt  CppClass.cpp  CppClass.h
src/Movie/: CMakeLists.txt  Movie.h
src/ObjectList/: CMakeLists.txt  Defender.cpp  Defender.h  FootBallItem.cpp  FootBallItem.h  Player.cpp  Player.h  PlayerDetails.cpp  PlayerDetails.h  Striker.cpp  Striker.h
src/RandomNumber/: CMakeLists.txt  RandomNumber.cpp  RandomNumber.h
src/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h
style/: Main.qml  Other.qml
